fix fdo#51547: revert "Some cppcheck cleaning"

This reverts commit 2f804c94cdaaa9ac047f229509c774dbea1dbcaa.